--- a/file1.html
+++ b/file1.html
@@ -7,8 +7,8 @@
   <style>
     /* Styling to set the color to red */
     .red-text {
-      color: red;
-      font-size: 24px;
+      color: green;
+      font-size: 36px;
     }
   </style>
 </head>
