--- a/file2.html
+++ b/file2.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello HTML</title>
   <style>
-    /* Styling to set the color to red */
+    /* Styling to set the color to blue */
     .red-text {
       color: blue;
       font-size: 24px;
