Font style in File1 changed

--- a/file1.html
+++ b/file1.html
@@ -7,6 +7,7 @@
   <style>
     /* Styling to set the color to red */
     .red-text {
+      font-style: italic;
       color: green;
       font-size: 36px;
     }
