Fonts styles Changed in Both Files

--- a/file1.html
+++ b/file1.html
@@ -7,7 +7,8 @@
   <style>
     /* Styling to set the color to red */
     .red-text {
-      font-style: italic;
+      font-style: oblique;
+      font-weight: bold;
       color: green;
       font-size: 36px;
     }
