--- a/file2.html
+++ b/file2.html
@@ -8,7 +8,9 @@
     /* Styling to set the color to blue */
     .red-text {
       color: blue;
+      font-style: italic;
       font-size: 24px;
+      font-variant: small-caps;
     }
   </style>
 </head>
