--- a/file1.html
+++ b/file1.html
@@ -14,6 +14,6 @@
   </style>
 </head>
 <body>
-  <h1 class="red-text">This is a styled paragraph using internal CSS.</h1>
+  <h1 class="red-text">This is a styled paragraph using CSS.</h1>
 </body>
 </html>
