--- a/file1.html
+++ b/file1.html
@@ -7,12 +7,14 @@
   <style>
     /* Styling to set the color to red */
     .red-text {
-      color: red;
-      font-size: 24px;
+      font-style: oblique;
+      font-weight: bold;
+      color: green;
+      font-size: 36px;
     }
   </style>
 </head>
 <body>
-  <h1 class="red-text">Hello, World!</h1>
+  <h1 class="red-text">This Sentence Has Been Altered </h1>
 </body>
 </html>
