--- a/file2.html
+++ b/file2.html
@@ -5,14 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello HTML</title>
   <style>
-    /* Styling to set the color to red */
+    /* Styling to set the color to blue */
     .red-text {
       color: blue;
+      font-style: italic;
       font-size: 24px;
+      font-variant: small-caps;
     }
   </style>
 </head>
 <body>
-  <h1 class="red-text">Hello HTML</h1>
+  <h1 class="red-text">Ongoing Task</h1>
 </body>
 </html>
